--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html><head>
+<html>
+  <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.10/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
   </head>
+
   <body>
+    <p style="text-align:center; font-size:24px; margin-top:20px;">
+      마우스를 클릭해보세요
+    </p>
+
     <script src="Box.js"></script>
     <script src="Walker.js"></script>
     <script src="sketch.js"></script>
-  
-
-</body></html>
+  </body>
+</html>
