--- a/index.html
+++ b/index.html
@@ -5,12 +5,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.10/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+    ...existing code...
+    <style>
+      /* 중앙에 표시되는 안내문구 스타일 */
+      #prompt {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: rgba(0,0,0,0.7);
+        color: #fff;
+        padding: 12px 18px;
+        border-radius: 8px;
+        font-size: 18px;
+        z-index: 9999;
+        text-align: center;
+        pointer-events: none;
+      }
+    </style>
   </head>
 
   <body>
-    <p style="text-align:center; font-size:24px; margin-top:20px;">
-      마우스를 클릭해보세요
-    </p>
+    ...existing code...
+    <div id="prompt">마우스를 클릭해보세요</div>
+
+    <script>
+      // 마우스 또는 터치 시 문구 숨기기
+      function hidePrompt() {
+        const el = document.getElementById('prompt');
+        if (el) el.style.display = 'none';
+        window.removeEventListener('mousedown', hidePrompt);
+        window.removeEventListener('touchstart', hidePrompt);
+      }
+      window.addEventListener('mousedown', hidePrompt);
+      window.addEventListener('touchstart', hidePrompt);
+    </script>
 
     <script src="Box.js"></script>
     <script src="Walker.js"></script>
