텍스트 수정

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     ...existing code...
-    <div id="prompt">마우스를 클릭해보세요</div>
+    <div id="prompt">마우스를 클릭해 모양에 알맞는 구멍에 넣어보세요!</div>
 
     <script>
       // 마우스 또는 터치 시 문구 숨기기
